@@ -14,8 +14,12 @@ import com.evolveum.midpoint.security.api.AuthorizationTransformer;
 import com.evolveum.midpoint.xml.ns._public.common.common_3.AuthorizationLimitationsType;
 
 /**
- * @author semancik
+ * Collects authorization limitations from a set of authorizations (see {@link #accept(Authorization)}) and then
+ * applies them (as a filter) to a set of authorizations (see {@link #transform(Authorization)}).
  *
+ * Used for creating a donor principal with limited set of authorizations.
+ *
+ * @author semancik
  */
 public class AuthorizationLimitationsCollector implements Consumer<Authorization>, AuthorizationTransformer {
 
@@ -50,10 +54,11 @@ public class AuthorizationLimitationsCollector implements Consumer<Authorization
     @Override
     public Collection<Authorization> transform(Authorization autz) {
         if (unlimited || allActionsAllowed(autz)) {
-            return Arrays.asList(autz);
+            return Collections.singletonList(autz);
         }
         Authorization limitedAutz = autz.clone();
         Iterator<String> actionIterator = limitedAutz.getAction().iterator();
+        //noinspection Java8CollectionRemoveIf: Not all operations are supported on prism collections
         while (actionIterator.hasNext()) {
             String autzAction = actionIterator.next();
             if (!limitActions.contains(autzAction)) {
@@ -61,9 +66,9 @@ public class AuthorizationLimitationsCollector implements Consumer<Authorization
             }
         }
         if (limitedAutz.getAction().isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
-        return Arrays.asList(limitedAutz);
+        return List.of(limitedAutz);
     }
 
     private boolean allActionsAllowed(Authorization autz) {
@@ -74,5 +79,4 @@ public class AuthorizationLimitationsCollector implements Consumer<Authorization
         }
         return true;
     }
-
 }
